--- a/ML/config_screen_latent_dim.json
+++ b/ML/config_screen_latent_dim.json
@@ -17,8 +17,8 @@
       "loss_function_combined": "CrossEntropyLoss",
       "early_stopping_VAE": true,
       "early_stopping_combined": true,
-      "warmup_epochs_VAE": 8,
-      "warmup_epochs_combined": 8,
+      "warmup_epochs_VAE": 10,
+      "warmup_epochs_combined": 10,
       "patience_VAE": 30,
       "patience_combined": 30,
       "min_lr_VAE": 1e-7,
@@ -31,10 +31,11 @@
       "alpha_combined": 2e-5 
     },
     "paths": {
-      "root_dir": "myfolder/",
-      "data_dir": "myfolder/data/",
-      "model_dir": "myfolder/models/",
-      "log_dir": "myfolder/logs/"
+      "root_dir": "/myfolder/test/",
+      "data_dir": "/myfolder/data/",
+      "model_dir": "/myfolder/models/",
+      "vae_model_dir": "/myfolder/models/",
+    "log_dir": "/myfolder/logs/"
     },
     "model_architecture": {
       "latent_dim_list": [4, 8, 16, 32, 64],
@@ -42,6 +43,9 @@
       "dropout_rate": 0.1
     },
     "dataset": {
+      "outputs_filename": "all_outputs_cont.npy",
+      "types_filename": "all_types_cont.npy",
+      "params_filename": "all_params_cont.npy",
       "validation_split": 0.1,
       "test_split": 0.1,
       "plot_examples": false,
@@ -68,7 +72,10 @@
     "checkpointing": {
       "save_checkpoints": true,
       "checkpoint_interval": 100,
-      "checkpoint_dir": "myfolder/models/"
-    }
+      "checkpoint_dir": "/myfolder/checkpoints/"
+    },
+    "performance": {
+      "plot_examples": true
+  }
   }
   
